# CodecSim

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  仕様書.md
.github/workflows/: build.yml
CodecSim/: CMakeLists.txt  CodecProcessor.cpp  CodecProcessor.h  CodecRegistry.cpp  CodecRegistry.h  CodecSim.cpp  CodecSim.h  FFmpegPipeManager.cpp  FFmpegPipeManager.h  config.h
CodecSim/resources/: main.rc
installer/: CodecSim_Full.iss  CodecSim_Trial.iss  build_installers.bat  trial_notice.txt
patches/: iplug2-vst3-bus-activation.patch
